--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "dom"
     ],
     "paths": {
-      "@modules": ["src/modules"]
+      "@components/*": ["src/components/*"],
+      "@modules/*": ["src/modules/*"],
+      "@services": ["src/services"]
     }
   },
   "angularCompilerOptions": {
